--- a/students.html
+++ b/students.html
@@ -430,8 +430,38 @@ printListBtn.addEventListener('click',()=>{
 
 /* --- Print student --- */
 printStudentBtn.addEventListener('click',()=>{
-  const html=`<div class="print-page"><h2>${settingsData.name||''} - استمارة الطالب</h2><hr>${modalBody.innerHTML}</div>`;
-  const w=window.open('','','width=900,height=700'); w.document.write(html); w.print();
+  const studentHTML = modalBody.innerHTML;
+  const institute = settingsData.name || '';
+  const printHTML = `
+    <html lang="ar" dir="rtl">
+    <head>
+      <meta charset="UTF-8">
+      <title>استمارة الطالب</title>
+      <style>
+        body{font-family:'Cairo',sans-serif; margin:20px; color:#102027;}
+        h1,h2,h3{margin:0;padding:0;}
+        .header{text-align:center; margin-bottom:20px;}
+        .header h1{color:#004aad;}
+        .section{margin-bottom:15px;}
+        .section hr{border:none; border-top:1px solid #004aad; margin:8px 0;}
+        .subject-row{display:flex;justify-content:space-between; margin-bottom:6px; border-bottom:1px dashed #ccc; padding-bottom:4px;}
+        .subject-row div{flex:1; text-align:center;}
+      </style>
+    </head>
+    <body>
+      <div class="header">
+        <h1>${institute}</h1>
+        <h2>استمارة الطالب</h2>
+      </div>
+      ${studentHTML}
+    </body>
+    </html>
+  `;
+  const w = window.open('','_blank','width=900,height=700');
+  w.document.write(printHTML);
+  w.document.close();
+  w.focus();
+  w.print();
 });
 
 /* --- Clear form --- */
