--- a/classes.html
+++ b/classes.html
@@ -3,28 +3,33 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>نظام OMA - إدارة الحصص</title>
+<title>إدارة الحصص - المعهد</title>
 <style>
-body{font-family:'Cairo',sans-serif;direction:rtl;margin:0;background:#f5f9ff;color:#102027;visibility:hidden;}
-header{background:#004aad;color:#fff;padding:18px;text-align:center;font-size:20px;font-weight:700;}
-.wrap{max-width:1200px;margin:22px auto;padding:12px;}
-.card{background:#fff;border-radius:10px;padding:14px;margin-bottom:16px;box-shadow:0 6px 18px rgba(6,20,30,0.06);}
-input, select{padding:10px;border:1px solid #d6dde9;border-radius:8px;font-size:15px;width:100%;margin-bottom:8px;}
-label{display:block;margin-bottom:6px;font-size:13px;color:#37474f;}
-.btn{background:#004aad;color:#fff;padding:10px 14px;border:none;border-radius:8px;cursor:pointer;font-weight:700;}
-.btn.warn{background:#ff7043;}
-table{width:100%;border-collapse:collapse;margin-top:12px;}
-th,td{padding:10px;border-bottom:1px solid #eee;text-align:center;font-size:14px;}
-th{background:#004aad;color:#fff;}
+body { font-family:'Cairo',sans-serif; direction:rtl; margin:0; padding:20px; visibility:hidden; background:#f5f9ff; color:#102027; }
+header { text-align:center; padding:20px; font-size:22px; font-weight:700; display:flex; align-items:center; justify-content:center; gap:12px; }
+header img { height:50px; }
+.wrap { max-width:1200px; margin:20px auto; }
+.card { background:#fff; border-radius:10px; padding:16px; margin-bottom:16px; box-shadow:0 6px 18px rgba(6,20,30,0.06); }
+input, select { padding:10px; border-radius:8px; border:1px solid #d6dde9; font-size:15px; width:100%; margin-bottom:8px; }
+label { display:block; margin-bottom:6px; font-size:13px; color:#37474f; }
+.btn { padding:10px 14px; border:none; border-radius:8px; cursor:pointer; font-weight:700; }
+.btn.warn { background:#ff7043; color:#fff; }
+table { width:100%; border-collapse:collapse; margin-top:12px; }
+th, td { padding:10px; border-bottom:1px solid #eee; text-align:center; font-size:14px; }
+th { color:#fff; }
 @media print{
-  body{background:white;}
-  header,.filters,.actions,.modal,.btn{display:none !important;}
-  table{page-break-inside:avoid;}
+  body { background:white; }
+  .filters, .actions, .btn, form { display:none !important; }
+  table { page-break-inside:avoid; }
+  header { justify-content:flex-start; }
 }
 </style>
 </head>
 <body>
-<header>نظام OMA - إدارة الحصص</header>
+<header>
+  <img id="instituteLogo" src="" alt="شعار المعهد">
+  <span id="instituteName">المعهد</span>
+</header>
 <div class="wrap">
 
 <div class="card">
@@ -36,8 +41,24 @@ th{background:#004aad;color:#fff;}
     <select id="teacherSelect" required></select>
     <label>المجموعة / الكروب</label>
     <select id="groupSelect" required></select>
+    <label>القاعة</label>
+    <select id="roomSelect" required>
+      <option value="">اختر القاعة</option>
+      <option value="قاعة 1">قاعة 1</option>
+      <option value="قاعة 2">قاعة 2</option>
+      <option value="قاعة 3">قاعة 3</option>
+      <option value="قاعة 4">قاعة 4</option>
+      <option value="قاعة 5">قاعة 5</option>
+      <option value="قاعة 6">قاعة 6</option>
+      <option value="قاعة 7">قاعة 7</option>
+      <option value="قاعة 8">قاعة 8</option>
+      <option value="قاعة 9">قاعة 9</option>
+      <option value="قاعة 10">قاعة 10</option>
+    </select>
     <label>اليوم</label>
     <select id="daySelect" required>
+      <option value="السبت">السبت</option>
+      <option value="الأحد">الأحد</option>
       <option value="الاثنين">الاثنين</option>
       <option value="الثلاثاء">الثلاثاء</option>
       <option value="الأربعاء">الأربعاء</option>
@@ -46,7 +67,7 @@ th{background:#004aad;color:#fff;}
     </select>
     <label>الوقت</label>
     <input id="timeInput" type="time" required>
-    <button type="submit" class="btn">✅ حفظ الحصة</button>
+    <button type="submit" class="btn" id="saveBtn">✅ حفظ الحصة</button>
   </form>
 </div>
 
@@ -59,6 +80,7 @@ th{background:#004aad;color:#fff;}
   <label>المجموعة</label>
   <select id="filterGroup"><option value="">الكل</option></select>
   <button id="filterBtn" class="btn" style="margin-top:8px">تطبيق الفلتر</button>
+  <button id="printBtn" class="btn" style="margin-top:8px">🖨️ طباعة الجدول</button>
 </div>
 
 <div class="card">
@@ -71,6 +93,7 @@ th{background:#004aad;color:#fff;}
         <th>المجموعة</th>
         <th>اليوم</th>
         <th>الوقت</th>
+        <th>القاعة</th>
         <th>خيارات</th>
       </tr>
     </thead>
@@ -83,7 +106,7 @@ th{background:#004aad;color:#fff;}
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js";
 import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
-import { getFirestore, collection, addDoc, getDocs, doc, deleteDoc } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
+import { getFirestore, collection, addDoc, getDocs, doc, deleteDoc, getDoc } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
 
 // 🔹 إعداد Firebase
 const firebaseConfig = {
@@ -95,44 +118,58 @@ const firebaseConfig = {
   appId: "1:899300774863:web:0a81a7f5747ef37d49b8ba",
   measurementId: "G-5CKWYQT9XZ"
 };
-
 const app = initializeApp(firebaseConfig);
 const auth = getAuth(app);
 const db = getFirestore(app);
 
-// عناصر النموذج
 const classForm = document.getElementById("classForm");
 const subjectSelect = document.getElementById("subjectSelect");
 const teacherSelect = document.getElementById("teacherSelect");
 const groupSelect = document.getElementById("groupSelect");
+const roomSelect = document.getElementById("roomSelect");
+const daySelect = document.getElementById("daySelect");
+const timeInput = document.getElementById("timeInput");
 const classesTableBody = document.querySelector("#classesTable tbody");
 
 const filterSubject = document.getElementById("filterSubject");
 const filterTeacher = document.getElementById("filterTeacher");
 const filterGroup = document.getElementById("filterGroup");
 const filterBtn = document.getElementById("filterBtn");
+const printBtn = document.getElementById("printBtn");
 
-let subjectsList=[], teachersList=[], groupsList=[], classesData=[];
+let subjectsList=[], teachersList=[], groupsList=[], classesData=[], instituteSettings={};
 
 // 🔑 التحقق من تسجيل الدخول
 onAuthStateChanged(auth, async (user) => {
-  if (!user) {
-    window.location.href = "login.html";
-    return;
-  }
+  if (!user) { window.location.href = "login.html"; return; }
 
   try {
-    // عرض الصفحة بعد التأكد من تسجيل الدخول
     document.body.style.visibility = "visible";
-
-    // تحميل البيانات
+    await loadInstituteSettings();
     await loadSubjectsTeachersGroups();
     await loadClasses();
-  } catch (err) {
-    console.error("خطأ أثناء تحميل البيانات:", err);
-    alert("حدث خطأ أثناء تحميل الصفحة، حاول إعادة تحميل الصفحة.");
+  } catch(err) {
+    console.error("خطأ تحميل البيانات:", err);
+    alert("حدث خطأ أثناء تحميل الصفحة.");
   }
 });
+
+// تحميل إعدادات المعهد
+async function loadInstituteSettings(){
+  const docSnap = await getDoc(doc(db,"settings","institute"));
+  if(docSnap.exists()){
+    instituteSettings = docSnap.data();
+    document.getElementById("instituteName").textContent = instituteSettings.name || "المعهد";
+    document.getElementById("instituteLogo").src = instituteSettings.logo || "";
+    // تطبيق الألوان تلقائيًا
+    if(instituteSettings.colors){
+      document.body.style.background = instituteSettings.colors.background || "#f5f9ff";
+      document.body.style.color = instituteSettings.colors.text || "#102027";
+      document.querySelectorAll(".btn").forEach(b=>b.style.background = instituteSettings.colors.primary || "#004aad");
+      document.querySelectorAll("th").forEach(th=>th.style.background = instituteSettings.colors.primary || "#004aad");
+    }
+  }
+}
 
 // تحميل المواد، الأساتذة، الكروبات
 async function loadSubjectsTeachersGroups(){
@@ -176,14 +213,28 @@ async function loadSubjectsTeachersGroups(){
   });
 }
 
-// حفظ الحصة
+// حفظ الحصة مع منع التعارض
 classForm.addEventListener("submit", async e=>{
   e.preventDefault();
   const subject = subjectSelect.value;
   const teacherId = teacherSelect.value;
   const group = groupSelect.value;
-  const day = document.getElementById("daySelect").value;
-  const time = document.getElementById("timeInput").value;
+  const day = daySelect.value;
+  const time = timeInput.value;
+  const room = roomSelect.value;
+
+  // التحقق من التعارض
+  const snapshot = await getDocs(collection(db,"classes"));
+  let conflict = false;
+  snapshot.forEach(c=>{
+    const cls = c.data();
+    if(cls.day===day && cls.time===time){
+      if(cls.room===room) conflict = true;
+      if(cls.teacherId===teacherId) conflict = true;
+      if(cls.group===group) conflict = true;
+    }
+  });
+  if(conflict){ alert("⚠️ يوجد تعارض في القاعة، الأستاذ أو الكروب بنفس اليوم والوقت."); return; }
 
   // الطلاب المرتبطين بالكروب
   const studentsSnap = await getDocs(collection(db,"students"));
@@ -193,16 +244,7 @@ classForm.addEventListener("submit", async e=>{
     if(st.group === group) groupStudents.push({id: s.id, name: st.name});
   });
 
-  await addDoc(collection(db,"classes"),{
-    subject,
-    teacherId,
-    group,
-    day,
-    time,
-    students: groupStudents,
-    attendance: []
-  });
-
+  await addDoc(collection(db,"classes"),{subject,teacherId,group,day,time,room,students:groupStudents,attendance:[]});
   alert("تم حفظ الحصة بنجاح");
   classForm.reset();
   loadClasses();
@@ -221,12 +263,16 @@ async function loadClasses(filter={}){
       classesData.push(cls);
       const teacherName = (teachersList.find(t=>t.id===cls.teacherId)||{}).name || "غير معروف";
       const tr = document.createElement("tr");
+      // تلوين الصف حسب اللون المأخوذ من الإعدادات
+      const bgColor = instituteSettings.colors?.row || "#eef4ff";
+      tr.style.background = bgColor;
       tr.innerHTML = `
         <td>${cls.subject}</td>
         <td>${teacherName}</td>
         <td>${cls.group}</td>
         <td>${cls.day}</td>
         <td>${cls.time}</td>
+        <td>${cls.room}</td>
         <td><button class="btn warn" onclick="deleteClass('${cls.id}')">🗑️ حذف</button></td>
       `;
       classesTableBody.appendChild(tr);
@@ -249,6 +295,11 @@ filterBtn.addEventListener("click", ()=>{
     teacher: filterTeacher.value,
     group: filterGroup.value
   });
+});
+
+// الطباعة
+printBtn.addEventListener("click", ()=>{
+  window.print();
 });
 </script>
 </body>
